--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0",
+    "@angular/animations": "^12.1.5",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
     "@angular/core": "~12.1.0",
@@ -20,7 +20,10 @@
     "@angular/router": "~12.1.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^4.6.0",
+    "bootswatch": "^5.1.0",
     "ngx-bootstrap": "^7.0.0",
+    "ngx-spinner": "^12.0.0",
+    "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
