--- a/Back/src/ProEventos.Persistence/ProEventos.Persistence.csproj
+++ b/Back/src/ProEventos.Persistence/ProEventos.Persistence.csproj
@@ -11,6 +11,7 @@
    <ItemGroup>
      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.2" />
    </ItemGroup>
 
 </Project>
